# alfred_bot

./: .gitignore  .gitmodules  .project  .travis.yml  CHANGELOG.rst  CMakeLists.txt  alfred_bot.launch  alfred_ia.launch  build.gradle  package.xml  settings.gradle
launch/: ia.launch
src/main/java/com/rosalfred/core/ia/: CommandPublisher.java  IaConfig.java  IaNode.java  RosRiveScript.java  RsContext.java  package-info.java
src/main/java/com/rosalfred/core/ia/manual/: Chatter.java  Listener.java  Talker.java
src/main/java/com/rosalfred/core/ia/rivescript/: BotReply.java  ObjectHandler.java  RSBot.java  RiveScript.java
src/main/resources/rivescript/: admin.rive  base.rive  begin.rive  clients.rive  function-base.rive  function-learn.rive  function-light.rive  function-math.rive  function-media.rive  function-meteo.rive  function-newuser.rive  function-search.rive  learn.rive  net-mail.rive  net-service.rive  net-skype.rive  net-ws-allocine.rive  net-ws-google-search.rive  net-ws-news.rive  net-ws-wikipedia.rive  net-ws-youtube.rive  system-command.rive
src/main/resources/rivescript/src/script/: date_current.java  get_ip.java  shutdown.java  time_current.java  time_current_hour.java
src/main/resources/rivescript/src/script/building/light/: Light.java
src/main/resources/rivescript/src/script/media/: MediaBot.java  backward.java  down.java  forward.java  select_source.java  shutdown_node.java  start_node.java  up.java
src/main/resources/rivescript/src/script/media/onkyo/: Onkyo.java
src/main/resources/rivescript/src/script/media/samsungtv/: SamsungTv.java  (+5 more)
(+26 files in other folders)
