<?xml version="1.0"?>
<package>
  <name>alfred_bot</name>
  <version>0.1.121</version>
  <description>This package is bot of Alfred Assitant for ROS. This package is part of Alfred Assistant stack.</description>

  <maintainer email="mick.gaillard@gmail.com">Mickael Gaillard</maintainer>
  <maintainer email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</maintainer>
  <author email="mick.gaillard@gmail.com">Mickael Gaillard</author>
  <author email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>smarthome_media_model</build_depend>
  <build_depend>smarthome_comm_msgs</build_depend>
  <build_depend>smarthome_media_msgs</build_depend>
  <build_depend>smarthome_common_driver</build_depend>
  <build_depend>rosjava_core</build_depend>
  <build_depend>rosjava_dynamic_reconfigure</build_depend>
  <build_depend>rosjava_build_tools</build_depend>

  <run_depend>smarthome_media_model</run_depend>
  <run_depend>smarthome_comm_msgs</run_depend>
  <run_depend>smarthome_media_msgs</run_depend>
  <run_depend>smarthome_common_driver</run_depend>
  <run_depend>rosjava_core</run_depend>
  <run_depend>rosjava_dynamic_reconfigure</run_depend>

</package>
